--- a/css/style.scss
+++ b/css/style.scss
@@ -45,7 +45,7 @@ header{
     display:flex;
     flex-direction:column;
     box-sizing: border-box;
-    padding: 30px 20px;
+    padding: 30px 0px;
     h1{
         margin:auto;
     }
@@ -73,6 +73,8 @@ header .sp-navi-li{
     display:flex;
     flex-direction: row;
     justify-content:center;
+    position:relative;
+    z-index:999;
     .sp-navi-item{
         display:flex;
         padding:12px 10px;
@@ -80,12 +82,34 @@ header .sp-navi-li{
     .sp-navi-item-toggle{
         display:flex;
         padding:12px 10px;
+        
     }
       .p-menu-toggle {
         display: none;
+        position:absolute;
+        top:50px;
+        left:0px;
+        width:100%;
+        margin:0px;
+        padding: 0px 0px 20px 0px;
+        background-Color:#ff6d77;
+        li{
+            width: 98%;
+            margin: 0px 1%;
+            padding: 20px;
+            border-bottom: 1px solid #fff;
+            a{
+              Color:#fff;
+            }
+        &:last-child{
+            border-bottom:none;
+        }
+        }
+    }
 }
+.p-menu-toggle li:nth-child(4):after{
+ border-bottom:none;
 }
-
 @media (min-width: 768px) {
   header .sp-navi {
     display: none;
@@ -166,7 +190,7 @@ main{
 .product-img-top{
     display:flex;
     box-sizing:border-box;
-    padding: 0 0 19px 0;
+    padding: 20px 0 19px 0;
     .list-img{
         display: flex;
         flex-wrap: wrap;
@@ -211,10 +235,38 @@ main{
     background-color:#fff;
     padding: 40px 60px;
     box-sizing:border-box;
+    align-items: center;
+}
+.product-name01{
+    display:flex;
+    justify-content:space-between;
+    border-bottom:1px solid #e8e4da;
+     .product-name02{
+        font-weight:bold;
+        font-size:14px;
+    }
+}
+@media(max-width: 768px){
+    .product-name01{
+    display:flex;
+    flex-direction:column;
+    border-bottom:1px solid #e8e4da;
+     .product-name02{
+        font-weight:bold;
+        font-size:14px;
+        margin-bottom: 0;
+    }
+    p{
+        margin-top: 0;
+    }
+}
 }
 @media(max-width: 768px){
     .product-name{
 	width:100%;
+    background-color:#fff;
+    padding: 0;
+    box-sizing:border-box;
 }
 }
 @media(max-width: 768px){
@@ -441,6 +493,9 @@ h2{
 	padding:20px;
 	margin: 0 0 2px 2px;
 	background-color:#fff;
+	img{
+	    width: 100%;
+	}
 }
 @media (max-width: 768px){
     .shopping-guide{
@@ -524,7 +579,7 @@ dd{
     #search-box{
         width: 300px;
     .search-input{
-            width: 100%;
+            width: 90%;
         }
     }
 }
@@ -587,8 +642,18 @@ dd{
 .info-img{
 	padding: 10px 10px 21px 10px;
 	p{
-		text-align:center;
+		text-align:left;
 	}
+}
+.info-img01{
+    display:block;
+    width: 50%;
+    img{
+        width: 100%;
+    }
+}
+.info-img02{
+    width: 50%;
 }
 
 //info
