--- a/images/style.css
+++ b/images/style.css
@@ -230,6 +230,9 @@ td {
   width: 100%;
   margin: 19px 25px 0 0; }
 
+@media (max-width: 768px) {
+  .border-bottom p {
+    padding: 0 50px; } }
 .p-price .span01 {
   color: #e80f66;
   font-weight: bold;
@@ -288,9 +291,6 @@ td {
 p .quantity {
   border: 1px solid #e3e8cf; }
 
-@media (max-width: 768px) {
-  p .quantity {
-    margin: 0 50px; } }
 .top-image {
   width: 100%;
   height: 180px; }
@@ -466,7 +466,7 @@ dd {
   #search-box {
     width: 300px; }
     #search-box .search-input {
-      width: 98%; } }
+      width: 90%; } }
 .accordion-menu {
   width: 100%;
   max-width: 350px;
@@ -539,7 +539,7 @@ dd {
 
   .info-img {
     display: flex;
-    padding: 10px 10px 30px 10px; }
+    padding: 10px 10px 85px 10px; }
     .info-img .info-img01 {
       display: block;
       width: 50%; }
