--- a/css/style.css
+++ b/css/style.css
@@ -19,7 +19,8 @@ header {
   display: flex;
   justify-content: space-between;
   width: 960px;
-  margin: auto; }
+  margin: auto;
+  padding: 40px 0; }
 
 @media (max-width: 768px) {
   header {
@@ -30,6 +31,9 @@ header {
     padding: 30px 0px; }
     header h1 {
       margin: auto; } }
+header .pc-navi {
+  align-items: center; }
+
 header .pc-navi-li {
   display: flex;
   flex-direction: row;
@@ -177,10 +181,16 @@ main {
 .product-name01 {
   display: flex;
   justify-content: space-between;
-  border-bottom: 1px solid #e8e4da; }
+  border-bottom: 1px solid #e8e4da;
+  padding: 10px 0; }
+  .product-name01 p {
+    margin: 18px 0 0 0; }
   .product-name01 .product-name02 {
     font-weight: bold;
-    font-size: 14px; }
+    font-size: 14px;
+    color: #000; }
+  .product-name01 .product-name03 {
+    color: #a6a6a6; }
 
 @media (max-width: 768px) {
   .product-name01 {
@@ -230,14 +240,22 @@ td {
   width: 100%;
   margin: 19px 25px 0 0; }
 
-.p-price .span01 {
-  color: #e80f66;
-  font-weight: bold;
-  font-size: 20px;
-  font-style: oblique; }
-.p-price .span02 {
-  font-size: 20px;
-  font-style: oblique; }
+.p-price {
+  padding: 0 100px 0 0; }
+  .p-price .span01 {
+    color: #e80f66;
+    font-weight: bold;
+    font-size: 20px;
+    font-style: oblique; }
+  .p-price .span01:before {
+    content: '¥';
+    color: #e80f66;
+    font-weight: bold;
+    font-size: 14px;
+    font-style: oblique; }
+  .p-price .span02 {
+    font-style: oblique;
+    font-size: 14px; }
 
 @media (max-width: 768px) {
   .p-price {
@@ -252,14 +270,24 @@ td {
     text-align: center; } }
 .heading01 {
   border-bottom: 1px solid #e3e8cf;
-  padding: 0 0 19px 0;
+  padding: 20px 0 19px 0;
   font-weight: bold;
+  font-size: 16px;
   color: #887f69; }
 
 .heading02 {
   font-weight: bold;
   color: #887f69; }
 
+@media (max-width: 768px) {
+  .heading01 {
+    font-size: 2rem; }
+
+  .heading02 {
+    font-size: 2rem; }
+
+  .heading03 {
+    font-size: 1.6rem; } }
 .products-img {
   display: block;
   margin: 19px 0; }
@@ -284,13 +312,15 @@ td {
   display: flex;
   justify-content: space-between;
   align-items: center; }
+  .border-bottom p {
+    padding: 0 60px; }
 
 p .quantity {
   border: 1px solid #e3e8cf; }
 
 @media (max-width: 768px) {
   p .quantity {
-    margin: 0 50px; } }
+    margin: 0 50px 0 0; } }
 .top-image {
   width: 100%;
   height: 180px; }
