--- a/css/style.scss
+++ b/css/style.scss
@@ -37,7 +37,7 @@ header{
     justify-content:space-between;
     width:960px;
     margin:auto;
-    padding: 40px 0;
+    padding: 5px 0;
 }
 
 @media (max-width: 768px) {
@@ -62,7 +62,7 @@ header .pc-navi-li{
     justify-content:space-between;
     .navi-item{
         display:flex;
-		margin:0 6px;
+		margin: 0 6px;
     }
 }
 @media (max-width: 768px) {
@@ -83,7 +83,6 @@ header .sp-navi-li{
         padding:12px 10px;
     }
     .sp-navi-item-toggle{
-        display:flex;
         padding:12px 10px;
         
     }
@@ -134,7 +133,6 @@ main{
         flex-direction: column;
         align-items: center;
         box-sizing: border-box;
-        padding: 0 10px;
     }
 }
 .main{
@@ -340,7 +338,9 @@ td{
 }
 @media(max-width: 768px){
     .p-price{
-        padding: 0 50px;
+        width: 100%;
+        text-align:center;
+        padding: 0;
     }
 }
 .add_to_cart{
@@ -351,6 +351,9 @@ td{
     .add_to_cart{
         width:100%;
         text-align:center;
+        img{
+            width: 100%;
+        }
     }
 }
 //p heading
@@ -405,18 +408,27 @@ td{
         padding: 0 60px;
     }
 }
+@media(max-width: 768px){
+    .border-bottom{
+        p{
+            width: 50%;
+        }
+    }
+}
 p .quantity{
     border:1px solid #e3e8cf;
 }
 @media(max-width: 768px){
     p .quantity{
-        margin: 0 50px 0 0 ;
+        margin: 0;
+        width: 90%;
     }
 }
 //top-image
 .top-image{
     width:100%;
     height:180px;
+    margin: 10px 0;
 }
 @media(max-width: 768px){
     .top-image{
@@ -499,10 +511,11 @@ h2{
         color:#fff;
         font-weight:bold;
         text-align:center;
-        width:10%;
-        padding:5px 0;
-        margin:10px 0;
-    
+        width: 121px;
+        padding: 10px 0;
+        margin: 10px 0;
+        font-size: 1.4rem;
+        letter-spacing: 0.1rem;
     }
 }
 @media(max-width:768px){
@@ -566,14 +579,13 @@ h3{
 dt{
 	color:$keyColor;
 	margin:auto;
-	padding: 13px 0;
+	padding: 5px 0;
 }
 dd{
     margin:auto;
 }
 .side-menu{
 	width:220px;
-	margin: 10px;;
 }
 @media(max-width: 768px){
     .side-menu{
@@ -583,7 +595,7 @@ dd{
 }
 .search{
 	padding: 20px;
-	margin: 10px 0;
+    margin: 10px 0 10px 0;
 	background-color:#fff;
 }
 @media(max-width: 768px){
@@ -625,7 +637,7 @@ dd{
 }
 @media(max-width: 768px){
     #search-box{
-        width: 300px;
+        width: 97%;
     .search-input{
             width: 98%;
         }
